--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,8 @@
 <h2>"<%= @user.fname %> <%= @user.lname[0] %>.'s Profile"</h2>
 
 <% if @user.id == current_user.id %>
-  <a href="/users/<%= @user.id %>/edit">[Add nickname]</a>
+  <a href="/users/<%= @user.id %>/edit">
+    <%= @user.nickname ? "[Edit nickname]" : "[Add nickname]" %></a>
 <% end  %>
 
 <section class="user-info">
