--- a/app/views/businesses/edit.html.erb
+++ b/app/views/businesses/edit.html.erb
@@ -1,1 +1,7 @@
-<h2>Business Edit Form</h2>
+<h2>Edit Your Business</h2>
+
+<p>* Please Note: it will take 24 hours for edits to be reviewed by a moderator.</p>
+
+<p>Google Map Plugin</p>
+
+<%= render partial: 'form', locals: { business: @business, verb: "Edit" } %>
