--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,11 @@
 
     <nav>
       <form action="" method="" id="search-bar">
-        <input type="text" name="search[find]">
+        <label for="find">Find</label>
+        <input type="text" id="find" name="search[find]">
 
-        <input type="text" name="search[near]">
+        <label for="near">Near</label>
+        <input type="text" id="near" name="search[near]">
 
         <input type ="submit" id="search-button">
       </form>
