--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,19 +7,19 @@
 <p>OR</p>
 
 <form action="<%= users_url %>" method="POST">
-  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+  <%= form_token %>
 
-  <input type="text" name="user[fname]">
-
-  <input type="text" name="user[lname]">
-
+  <label for="first-name">First Name</label>
+  <label for="last-name">Last Name</label>
   <br>
-
-  <input type="text" name="user[email]">
-
+  <input type="text" id="first-name" name="user[fname]" value="<%= @user.fname if @user %>">
+  <input type="text" id="last-name" name="user[lname]" value="<%= @user.lname if @user %>">
   <br>
-
-  <input type="password" name="user[password]">
+  <label for="email">Email</label>
+  <input type="text" id="email" name="user[email]" value="<%= @user.email if @user %>">
+  <br>
+  <label for="password">Password</label>
+  <input type="password" id="password" name="user[password]">
 
   <p>By creating an account, you agree to YelpLite’s <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a>.</p>
 
