--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -8,6 +8,7 @@
   <li><%= button_to "Add Photo", root_url %></li>
   <li><%= button_to "Share", root_url %></li>
   <li><%= button_to "Bookmark", root_url %></li>
+  <li><%= button_to "Remove Business", delete_business_url(@business), method: :get %>
 </ul>
 
 <p>Info with Google Map</p>
