--- a/app/views/reviews/delete.html.erb
+++ b/app/views/reviews/delete.html.erb
@@ -1,5 +1,6 @@
 <h3>Confirm Removal</h3>
 
-<p>Are you sure you want to delete your review from <%= @review.created_at %> for <%= @review.business %> in <%= @review.business.city_state_zip.split(",")[0] %>?</p>
+<p>Are you sure you want to delete your review from <%= @review.created_at.strftime('%m/%d/%Y') %> for <%= @review.business.name %> in <%= @review.business.city_state_zip.split(",")[0] %>?</p>
 
-<%= button_to "Confirm", review_url @review %>
+<%= button_to "Confirm", review_url(@review), method: :delete %>
+<%= link_to "Cancel", :back %>
