--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,15 +11,16 @@
     <p>YelpLite Logo</p>
 
     <nav>
-      <form action="" method="" id="search-bar">
+      <form action="<%= search_url %>" method="get">
         <label for="find">Find</label>
-        <input type="text" id="find" name="search[find]">
+        <input type="text" id="find" name="query[find]">
 
         <label for="near">Near</label>
-        <input type="text" id="near" name="search[near]">
+        <input type="text" id="near" name="query[near]">
 
-        <input type ="submit" id="search-button">
+        <input type="submit" id="search-button" value="Search">
       </form>
+
       <ul>
         <li><a href="/">Home</a></li>
 
