--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<p>Ad</p>
+<!-- <p>Ad</p> -->
 
 <% if @user.nickname %>
   <h2><%= @user.fname + " \"" + @user.nickname + "\" " + @user.lname[0] %>.'s Profile</h2>
@@ -14,7 +14,7 @@
 <section class="user-info">
   <p>User Image</p>
 
-  <p>&#9733; Follower Count...</p>
+  <!-- <p>&#9733; Follower Count...</p> -->
 
   <ul class="user-info">
     <% if @user != current_user %>
