--- a/app/views/businesses/new.html.erb
+++ b/app/views/businesses/new.html.erb
@@ -1,7 +1,5 @@
 <h2>Add a Business</h2>
 
-<p>* Please Note: it will take 24 hours for a newly added business to appear in search results.</p>
-
-<p>Google Map Plugin</p>
+<!-- <p>Google Map Plugin</p> -->
 
 <%= render partial: 'form', locals: { business: @business, verb: 'Add' } %>
