--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
       <p>User Profile Button</p>
       <ul>
         <li><a href="<%= user_url current_user.id %>">About Me</a></li>
-        <li><a href="#">Write a Review</a></li>
+        <li><a href="<%= search_url %>">Write a Review</a></li>
         <li><a href="<%= new_business_url %>">Add a Business</a></li>
         <li><%= button_to "Log Out", session_url, method: :delete %></li>
       </ul>
