--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<h2>YelpLife "Neighborhood"</h2>
+<!-- <h2>YelpLite "Neighborhood"</h2>
 
 <ul class="neighborhoods">
   <li><a href="#">N1</a></li>
@@ -7,7 +7,7 @@
   <li><a href="#">N4</a></li>
   <li><a href="#">N5</a></li>
   <li><a href="#">More Cities &raquo;</a></li>
-</ul>
+</ul> -->
 
 <section class="content">
   <div class="next-review">
