--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -47,6 +47,6 @@
   <%= render partial: 'reviews', locals: { user: @user } %>
 </section>
 
-<section class="followings">
+<!-- <section class="followings">
   <p>Plug in Users Following and Businesses Bookmarked</p>
-</section>
+</section> -->
