User partial bug.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,7 +24,7 @@
   </div>
 </section>
 
-<section class="sidebar">
+<!-- <section class="sidebar">
   <article>
       <h2>Review of the Day</h2>
       <p> review text </p>
@@ -32,4 +32,4 @@
   </article>
 
   <p>My Ad</p>
-</section>
+</section> -->
