--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
 <h2>Your Public Profile</h2>
 <p>So who are you, then? Tell the rest of YelpLite about your pretty little self.</p>
 
-<form class="user-edit" action="<%= user_url @user.id %>" method="post">
+<form class="user-edit" action="<%= user_url @user %>" method="post">
   <input type="hidden" name="_method" value="patch">
 
   <%= form_token %>
@@ -36,7 +36,7 @@
   <br>
 
   <input type="submit" value="Save Changes">
-  <a href="<%= user_url @user.id %>">Cancel</a>
+  <a href="<%= user_url @user %>">Cancel</a>
 </form>
 
 
