Add Avatars to Users and Businesses

--- a/app/views/businesses/_reviews.html.erb
+++ b/app/views/businesses/_reviews.html.erb
@@ -3,7 +3,12 @@
 
   <% business.reviews.reverse.each do |review| %>
     <article class="review">
-      <div class="user-thumb">User Image</div>
+      <div class="user-thumb">
+          <% if review.author.avatar %>
+            <img src="<%= review.author.avatar.url(:thumb) %>">
+            <img src="<%= review.author.avatar.url %>">
+          <% end %>
+      </div>
       <div class="review-headline"><a href="<%= user_url review.author %>"><%= user_name(review.author)  %></a></div>
       <div class="reviewer-location"><%= review.author.location %></div>
 
