--- a/app/views/pages/_reviews.html.erb
+++ b/app/views/pages/_reviews.html.erb
@@ -1,6 +1,11 @@
 <% Review.latest_activity.each do |review| %>
   <article class="review">
-    <div class="user-thumb">User Image</div>
+    <div class="user-thumb">
+      <% if review.author.avatar %>
+        <img src="<%= review.author.avatar.url(:thumb) %>">
+        <img src="<%= review.author.avatar.url %>">
+      <% end %>
+    </div>
     <div class="review-headline"><a href="<%= user_url review.author %>"><%= user_name(review.author) %></a> wrote a review for <a href="<%= business_url review.business %>"><%= review.business.name %></a></div>
 
     <% if review.author == current_user %>
