--- a/app/views/businesses/_form.html.erb
+++ b/app/views/businesses/_form.html.erb
@@ -1,8 +1,8 @@
 <% if business.persisted? %>
-  <form action="<%= business_url business %>" method="post">
+  <form action="<%= business_url business %>" method="post" enctype="multipart/form-data">
     <input type="hidden" name="_method" value="put">
 <% else %>
-  <form action="<%= businesses_url %>" method="post">
+  <form action="<%= businesses_url %>" method="post" enctype="multipart/form-data">
 <% end %>
 
   <%= form_token %>
@@ -40,6 +40,9 @@
   <input type="checkbox" name="business[recent]" id="recent" value="true" <%= "checked" if business.recent == true %>>
   <label for"recent">This business recently opened or is opening soon.</label>
   <br>
+
+  <label for="photo">Storefront Photo</label><br>
+  <input type="file" id="photo" name="business[avatar]">
 
   <% if !business.persisted? %>
   <input type="checkbox" name="business[review]" id="review" value="true" <%= "checked" %>>
