--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -15,7 +15,12 @@
 
 <p>Info with Google Map</p>
 
-<p>Photos</p>
+<div class="biz-thumb">
+  <% if @business.avatar %>
+    <img src="<%= @business.avatar.url(:thumb) %>">
+    <img src="<%= @business.avatar.url %>">
+  <% end %>
+</div>
 
 <section class="business-reviews">
   <%= render partial: 'reviews', locals: { business: @business } %>
