--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -51,6 +51,12 @@
   <ul class="reviews">
     <% if @business.reviews.length > 0 %>
       <% reviews(@business, 5).each do |review| %>
+        <div class="user-thumb">
+          <% if review.author.avatar %>
+             <img src="<%= review.author.avatar.url(:thumb) %>">
+             <img src="<%= review.author.avatar.url %>">
+           <% end %>
+        </div>
         <ul>
           <li><a href="<%=  user_url review.author %>"><%= review.author.fname + " " + review.author.lname[0] + "." %></a></li>
           <li><%= review.rating %></li>
