--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,9 @@
 <h3>Sign up for YelpLite</h3>
 <h4>Connect with great local businesses</h4>
 
-<button>Sign up with Facebook</button>
+<a href="auth/facebook">Sign up with Facebook</a>
+<a href="auth/twitter">Sign up with Twitter</a>
+
 <p>Don't worry, we never post without your permission.</p>
 
 <p>OR</p>
