Working Oauth Twitter and Facebook. Add login_type to Users and remove null constraints

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,8 @@
 <h3>Sign up for YelpLite</h3>
 <h4>Connect with great local businesses</h4>
 
-<a href="auth/facebook">Sign up with Facebook</a>
-<a href="auth/twitter">Sign up with Twitter</a>
+<a href="/auth/facebook">Sign up with Facebook</a>
+<a href="/auth/twitter">Sign up with Twitter</a>
 
 <p>Don't worry, we never post without your permission.</p>
 
