Working geolocation for Users and Businesses

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
           <li><a href="<%= new_user_url %>">About Me</a></li>
         <% end %>
 
-        <li><a href="#">Write a Review</a></li>
+        <li><a href="<%= search_url %>">Write a Review</a></li>
       </ul>
     </nav>
     <% if current_user %>
