--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -1,13 +1,15 @@
-<h2>Search Results</h2>
-
 <% if @results %>
-  <%= paginate @results %>
-
-  <ul>
-    <% @results.map(&:searchable).each do |result| %>
-      <li><%= render result %></li> <!-- calls partial -->
-    <% end %>
-  </ul>
+  <div class="header">
+    <h2><strong><%= params[:query][:find] %></strong> <%= params[:query][:near] %></h2>
+  </div>
+  
+  <div class="search-results">
+    <ul>
+      <% @results.map(&:searchable).each do |result| %>
+        <li><%= render result %></li> <!-- calls partial -->
+      <% end %>
+    </ul>
+  </div>
 
   <%= paginate @results %>
 <% end %>
