--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,1 +1,2 @@
-<div><%= link_to review.business.name, review.business %></div>
+<div>Review
+  <%= link_to review.business.name, review.business %></div>
